# FaceNix_Projects

./: CMakeLists.txt  README.md
3rdpart/: liblinear.exp  liblinear.lib
include/: AdaBoost.h  CasCade.h  FxAlib.hpp  Haar.h  fxBPNerveNetwork.h  fxBase.h  fxDIP.h  fxError.h  fxTypes.h
sample/: cmakelists.txt
sample/CasCadeHaar/: cmakelists.txt  main.c
sample/FA3000_data_transform/: cmakelists.txt  fa3000trans.h  faRead.c  faRead.h  faType.h  faWrite.c  faWrite.h  main.c
sample/FA3000_test/: cmakelists.txt  fa3000test.h  faLBF.c  faLBF.h  faRead.c  faSID.c  faSID.h  faTest.c  faTest.h  faType.h  main.c
sample/FA3000_train/: cmakelists.txt  fa3000.h  faGlobal.c  faGlobal.h  faLBF.c  faLBF.h  faLocal.c  faLocal.h  faRead.c  faRead.h  faSID.c  faSID.h  faSave.c  faSave.h  faTrain.c  faTrain.h  faType.h  main.c
sample/FA3000_unit_test/: cmakelists.txt  main.cpp
sample/JCDA_test/: cmakelists.txt  jcRead.c  jcRead.h  jcTest.c  jcTest.h  main.c
sample/JCDA_train/: cmakelists.txt  jcAlignment.c  jcDetection.c  jcFeature.c  jcFeature.h  jcForest.c  jcForest.h  jcGlobal.c  jcGlobal.h  jcLeafNode.c  jcNegSampleMining.c  jcTrain.c  (+7 more)
source/: CMakeLists.txt
source/ANN/: cmakelists.txt  fxBPNerveNetwork.c
source/Base/: cmakelists.txt  fxBase.c
source/Error/: cmakelists.txt  fxError.c
source/FaceAlignment/: Fa3000.cpp  Fa3000.hpp  cmakelists.txt
source/FaceDetection/: cmakelists.txt  fxHaarTrain.c
source/ImageProcessing/: cmakelists.txt  fxDIP__.h  fxHaar.c  fxResize.c
source/ML/: AdaBoost.c  cmakelists.txt
unittest/: BPtest.c  BPtrain.c  cmakelists.txt
