# the whole CMakeLists.txt for project FaceNix

PROJECT(FaceNix)
SET(CMAKE_BUILD_TYPE Debug)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

FIND_PACKAGE( OpenCV REQUIRED )
# include directories
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/bin)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)


# lib directories
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/3rdpart)

ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(sample)
ADD_SUBDIRECTORY(unittest)
#SET_TARGET_PROPERTIES(FaceNix PROPERTIES CLEAN_DIRECT_OUTPUT 1)